--- a/ConstellationMVC4/ConstellationStore.WebUI/Views/Home/Index.cshtml
+++ b/ConstellationMVC4/ConstellationStore.WebUI/Views/Home/Index.cshtml
@@ -14,19 +14,19 @@
         <div class="carousel-inner">
             <div class="item active">
                 <!-- Source of images shown here is : http://www.spitzer.caltech.edu/explore/475-Wallpapers  -->
-                <div class="fill" style="background-image:url('http://www.spitzer.caltech.edu/uploaded_files/other_files/0006/0616/NASA_HiddenUniverse_08.jpg');"></div>
+                <div class="fill" style="background-image:url('/Images/2_nasaspacescapes_0006_7.jpg');"></div>
                 <div class="carousel-caption">
                     <h2>The Sword of Orion</h2>
                 </div>
             </div>
             <div class="item">
-                <div class="fill" style="background-image:url('http://www.spitzer.caltech.edu/uploaded_files/other_files/0006/0721/NASA_HiddenUniverse_11.jpg');"></div>
+                <div class="fill" style="background-image:url('/Images/3_nasaspacescapes_0013_14.jpg');"></div>
                 <div class="carousel-caption">
                     <h2>Carina Nebula</h2>
                 </div>
             </div>
             <div class="item">
-                <div class="fill" style="background-image:url('http://www.spitzer.caltech.edu/uploaded_files/other_files/0006/0621/NASA_HiddenUniverse_07.jpg');"></div>
+                <div class="fill" style="background-image:url('/Images//4_nasaspacescapes_0012_13.jpg');"></div>
                 <div class="carousel-caption">
                     <h2>The Pinwheel Galaxy</h2>
                 </div>
